session-6/inventory-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
      - name: inventory
        image: gopalbugad/inventory:latest
        ports:
        - containerPort: 8082
  selector:
    matchLabels:
      app: inventory
