session-6/inventory-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  selector:
    app: inventory
  ports:
  - port: 8082
    targetPort: 8082
