session-6/inventory-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: inventory-ingress
spec:
  rules:
  - host: 
    http:
      paths:
      - pathType: Prefix
        path: /inventory
        backend:
          service:
            name: inventory-service
            port: 
              number: 8082
